src/objects/Testobject__c.object
<CustomObject>
    <fields>
        <fullName>Account_Related__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Related</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Testobjects</relationshipLabel>
        <relationshipName>Testobjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestPercentageToMultiPLToPL__c</fullName>
        <label>TestPercentageToMultiPLToPL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WFRfieldUpdate__c</fullName>
        <label>WFRfieldUpdate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WFRnumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WFRnumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WF_Criteria1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WF Criteria1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WF_Criteria2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WF Criteria2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WF_UpdateField1__c</fullName>
        <label>WF UpdateField1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_UpdateField2__c</fullName>
        <label>WF UpdateField2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WR3_Criteria3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WR3_Criteria3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WR3_UpdateField__c</fullName>
        <label>WR3 UpdateField</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WR_Check_formula__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WR Check formula</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WR_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WR Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currencyToPercentage__c</fullName>
        <label>currencyToPercentage</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>onlyPicklist__c</fullName>
        <label>onlyPicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>round_test__c</fullName>
        <label>round test</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>testCheckBoxToCurrencyToPhone__c</fullName>
        <label>testCheckBoxToCurrencyToPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>testCurrencytoemailToNum__c</fullName>
        <label>testCurrencytoemailToNum</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>testDateToPercentToPickListToMultiPickLi__c</fullName>
        <label>testDateToPercentToPickListToMultiPickLi</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test_currency__c</fullName>
        <label>test currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>textToTextArea__c</fullName>
        <label>textToTextArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Testobject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Testobject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Testobjects</pluralLabel>
    <recordTypes>
        <fullName>TestObjRT1</fullName>
        <active>true</active>
        <label>TestObjRT1</label>
    </recordTypes>
    <recordTypes>
        <fullName>TestObjRT2</fullName>
        <active>true</active>
        <label>TestObjRT2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>